--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Sebastian Łuszczek",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0"
   }
 }
