--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "handlebars": "^4.0.12",
+    "method-override": "^3.0.0",
+    "moment": "^2.23.0",
     "mongoose": "^5.4.2",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
